--- a/UI/csv-uploader/src/app/uploader/uploader.component.html
+++ b/UI/csv-uploader/src/app/uploader/uploader.component.html
@@ -1,5 +1,11 @@
+
 <div>
-    <input type="file" (change)="onFileChange($event)" accept=".csv" />
+  <label for="dataSets">Data Sets</label>
+  <select id="dataSets" [(ngModel)]="tableName">
+    <option *ngFor="let dataSet of dataSets" [value]="dataSet">{{ dataSet }}</option>
+  </select>
+</div>
+<div>
     <button (click)="saveCSV()">Save Changes</button>
     <table *ngIf="csvData.length">
       <thead>
