--- a/UI/Web extension/styles.css
+++ b/UI/Web extension/styles.css
@@ -1,6 +1,7 @@
 .input-container {
     display: flex;
     margin-top: auto;
+    margin-bottom: 30px;
 }
 
 /* Stilizarea pentru input text */
@@ -8,9 +9,10 @@ input[type="text"] {
     flex: 1;
     padding: 8px;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     border-radius: 4px;
     margin-right: 10px;
+    color: #666666;
 }
 
 /* Stilizarea pentru butonul de procesare text */
@@ -28,14 +30,15 @@ input[type="text"] {
     background-color: #218838;
 }
 .container {
-    width: 600px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     padding: 20px;
     font-family: Arial, sans-serif;
     position: relative;
     min-height: 100vh;
     box-sizing: border-box;
     padding-bottom: 80px; /* Spațiu pentru a face loc inputului fixat jos */
+    background-color: #ccc;
 }
 
 /* Stilizarea pentru titluri */
@@ -68,14 +71,22 @@ button {
     padding: 10px;
     font-size: 14px;
     color: #fff;
-    background-color: #007BFF;
+    background-color: #666666;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
 
+#submitArticlesButton{
+    margin-top: 10px;
+}
+
+#sendRequestButton {
+    margin-top: 20px;
+}
+
 button:hover {
-    background-color: #0056b3;
+    background-color: #434444;
 }
 
 /* Container pentru articole */
@@ -98,7 +109,7 @@ button:hover {
 
 #loadingMessage {
     font-size: 16px;
-    color: #007BFF;
+    color: #666666;
     margin-bottom: 10px;
 }
 
@@ -123,19 +134,19 @@ button:hover {
     display: flex;
     align-items: center;
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid black;
 }
 
 #articlesList li span {
     flex: 1;
     font-size: 16px;
-    color: #333;
+    color: black;
 }
 
 #articlesList li input.articleLabelText {
     flex: 2;
     padding: 5px;
-    font-size: 14px;
+    font-size: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin-left: 10px;
@@ -154,3 +165,17 @@ button:hover {
     background-color: #f9f9f9;
 }
 
+.article-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Aliniaza elementele la inceput si la sfarsitul containerului */
+}
+
+.article-container span {
+    flex-grow: 1; /* Face textul să ocupe spațiul disponibil */
+}
+
+.article-container select {
+    width: 80px; /* Lățimea dropdown-ului */
+    height: 30px; /* Înălțimea dropdown-ului */
+}
